feat: upgrade frontend for commercial release v2.0 and i18n integration
- Refactored entire presentation layer to meet professional commercial standards.
- Implemented a decoupled i18n engine with synchronized English and Spanish manifolds.
- Sanitized codebase: removed all Spanish comments and finalized documentation in English.
- Enhanced Production Lab UX by implementing interactive "FUSING" states for image and video synthesis.
- Resolved race condition issues in architectural diagrams during hard refreshes (CTRL+F5).
- Optimized responsive CSS layouts across all modules (Landing, Labs, Info, and Legal).
- Standardized UI/UX components for global market readiness.

--- a/src/presentation/about.html
+++ b/src/presentation/about.html
@@ -17,7 +17,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABOUT US | Z-Realism Studio</title>
+    <!-- Updated to support dynamic translation of the page title -->
+    <title data-i18n="nav_about">ABOUT US | Z-Realism Studio</title>
 
     <!-- FAVICON CONFIGURATION -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
