--- a/src/presentation/contact.html
+++ b/src/presentation/contact.html
@@ -14,7 +14,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTACT US | Z-Realism Studio</title>
+    <title data-i18n="nav_contact">CONTACT US | Z-Realism Studio</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     
@@ -96,6 +96,7 @@
         </section>
     </main>
 
+    <!-- SHARED ARCHITECTURAL COMPONENTS -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/cookie-consent.js"></script>
