--- a/src/presentation/legal.html
+++ b/src/presentation/legal.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LEGAL & PRIVACY | Z-Realism Studio</title>
+    <title data-i18n="nav_legal">LEGAL & PRIVACY | Z-Realism Studio</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
@@ -87,6 +87,7 @@
         </section>
     </main>
 
+    <!-- SHARED ARCHITECTURAL COMPONENTS -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/cookie-consent.js"></script>
