--- a/src/presentation/architecture.html
+++ b/src/presentation/architecture.html
@@ -2,21 +2,50 @@
 <html lang="en">
 <!-- 
   path: src/presentation/architecture.html
-  description: Technical Documentation - System Design & Engineering Patterns v2.0 - i18n Edition.
+  description: Technical Documentation - System Design & Engineering Patterns v2.1 - i18n Edition.
+  
+  ABSTRACT:
+  This document provides the technical blueprint of the Z-Realism engine.
+  It utilizes Mermaid.js for architectural diagrams.
+  
+  MODIFICATION LOG v2.1:
+  Synchronized Mermaid.js rendering with the I18nEngine to prevent race conditions 
+  during hard refreshes (CTRL+F5). The diagrams now wait for the translation 
+  manifold to be fully applied before initializing the SVG injection.
+
   author: Enrique González Gutiérrez <enrique.gonzalez.gutierrez@gmail.com>
 -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARCHITECTURE | Z-Realism Studio</title>
+    <title data-i18n="nav_tech">ARCHITECTURE | Z-Realism Studio</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/info.css">
     
+    <!-- REQUIRED ARCHITECTURAL ENGINE -->
     <script src="js/i18n-engine.js"></script>
+    
+    <!-- MERMAID DIAGRAM ENGINE CONFIGURATION -->
     <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-    <script>mermaid.initialize({startOnLoad:true, theme:'dark'});</script>
+    <script>
+        /**
+         * Orchestrates the synchronization between translation and diagram rendering.
+         * We disable 'startOnLoad' to prevent Mermaid from running before i18n is complete.
+         */
+        mermaid.initialize({
+            startOnLoad: false, 
+            theme: 'dark',
+            securityLevel: 'loose'
+        });
+
+        // Subscriber: Wait for the I18nEngine to signal that the DOM is ready.
+        window.addEventListener('i18nReady', () => {
+            mermaid.run();
+            console.log("MERMAID_SYNC: Architectural diagrams rendered after i18n manifold.");
+        });
+    </script>
 </head>
 <body>
     <div class="grid-overlay"></div>
@@ -43,6 +72,7 @@
             <p data-i18n="tech_hex_p3">This design strictly adheres to the Liskov Substitution Principle...</p>
 
             <div class="info-card">
+                <!-- Mermaid logic uses English technical terms as standard industry practice -->
                 <div class="mermaid">
                     graph LR
                     A[Client Application] --> B[API Gateway]
@@ -109,6 +139,7 @@
         </section>
     </main>
 
+    <!-- SHARED ARCHITECTURAL COMPONENTS -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/cookie-consent.js"></script>
