--- a/src/presentation/video-lab.html
+++ b/src/presentation/video-lab.html
@@ -122,6 +122,7 @@
         </main>
     </div>
 
+    <!-- SHARED ARCHITECTURAL COMPONENTS -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/cookie-consent.js"></script>
