refactor: optimize character DNA library and overhaul technical documentation
- Domain: Standardized metadata naming convention and refined prompt engineering.
- Domain: Removed clothing/hair descriptions from JSON to enforce pure Subject DNA preservation via ControlNet.
- Metadata: Added 'robert.json', 'ryo.json', 'takuma.json', and 'yuri.json' with optimized Canny thresholds and Denoising strengths.
- Presentation: Synchronized 'About', 'Architecture', 'Contact', and 'Legal' pages with the global i18n engine.
- Tech: Integrated interactive API documentation links (Swagger UI) across the informational manifold.
- Design: Overhauled 'architecture.html' with synchronized Mermaid.js diagrams and refined 'info.css' for commercial readability.
- DevOps: Updated Makefile to align with the new production lifecycle.

--- a/src/presentation/about.html
+++ b/src/presentation/about.html
@@ -101,6 +101,18 @@
                 </ul>
             </div>
 
+            <h2 data-i18n="tech_h2_async">Production Pipeline & API</h2>
+            <p data-i18n="tech_async_p1">
+                The lifecycle of a visual transformation is decoupled from the UI. 
+                Our backend handles GPU workloads asynchronously via Celery and Redis.
+            </p>
+            
+            <div class="hero-actions" style="margin-top: 30px; justify-content: flex-start;">
+                <a href="/api/docs" target="_blank" class="btn btn-secondary" style="font-size: 0.8rem;">
+                    <span data-i18n="btn_view_api">VIEW API DOCS</span> &nearr;
+                </a>
+            </div>
+
             <h2 data-i18n="about_team_h2">Our Team & Vision</h2>
             <p data-i18n="about_team_p1">
                 Z-Realism is founded by Enrique González Gutiérrez, a leading expert in 
